# sar_simulation

./: .gitattributes  .gitignore  .gitmodules  2-Term_Policy_Summary.csv  Eigen_Cheatsheet.txt  Func_approx_1D_2D.pt  Func_approx_2D.pt  GFG.xml  Journal_Paper_Outline.txt  LICENSE  Narrow-Short_22-Policy_Summary.csv  Notes.txt  Policy_Mapping_Compiled.csv  README.md  RL_Notes.txt  Symbolic_eq.py  ToDo.txt  WL_2-Policy_Summary.csv  Wide-Long_2-Policy_Summary.csv  Wide-Short_2-Policy_Summary.csv  Wide-Short_Summary.csv  XNL_2-Policy_Summary.csv  b_2.data  example.csv  example.py  example2.py  examplel.py  flicker_free  flicker_free.cpp  foo.csv  frames.gv  model.sdf  output.csv  output.xml  output2.csv  requirements.txt  runAgain_List.csv  runAgain_List_.csv  setup.cfg  setup.py  (+2 more)
crazyflie_control/: CMakeLists.txt  package.xml
crazyflie_control/include/: CompressedStates.h  ML_funcs.h  NN_funcs.h  controller_gtc.h  controller_gtc2.h  estimator.h  nml.h  stabilizer.h
crazyflie_control/include_CF_Firmware/: debug.h  led.h  log.h  math3d.h  motors.h  nml.h  param.h  stabilizer_types.h
crazyflie_control/src/: GTC_Troubleshooting.py  controller.cpp  controller_gtc copy.c  controller_gtc copy.cpp  controller_gtc.c  controller_gtc.cpp  estimator.cpp  example.cpp  nml.c  pub_example1.cpp  stabilizer.cpp
crazyflie_control2/: CMakeLists.txt  package.xml
crazyflie_control2/include/: NN_funcs.h  controller_gtc.h  estimator.h  motors.h  power_distribution.h  stabilizer.h  stabilizer_types.h
crazyflie_control2/src/: GTC_Troubleshooting.py  controller_gtc.c  estimator.cpp  power_distribution_stock.cpp  stabilizer.cpp
crazyflie_dashboard/: CMakeLists.txt  Dash_Plots.py  DashboardWindow.ui  Dashboard_Launch.py  Dashboard_Node.py  package.xml
crazyflie_data_converter/: CMakeLists.txt  package.xml
crazyflie_data_converter/include/: CF_DataConverter.h  quatcompress.h
crazyflie_data_converter/src/: CF_DataConverter.cpp
crazyflie_env/: CMakeLists.txt  Control_Playground.py  CrazyflieEnv_Base.py  CrazyflieEnv_DeepRL.py  CrazyflieEnv_ParamOpt.py  CrazyflieEnv_Sim.py  CrazyflieEnv_Sim2.py  Env_Test.py  RL_Training_2_term_Policy.py  SAR_Base_Interface.py  SAR_Env_Base.py  SAR_Env_Sim.py  SAR_Sim_Interface.py  __init__.py  package.xml
crazyflie_env/Core_Envs/: CrazyflieEnv_Base.py  CrazyflieEnv_Sim.py
crazyflie_env/src/: Control_Playground.py  CrazyflieEnv_Base.py  CrazyflieEnv_Sim.py  Crazyflie_env.py  Crazyflie_env2.py  ExecuteFlight.py  Iterative_Training_2-term_Policy.py  NN_Policy_Flights.py  RL_Policy_Playground.py  RL_Training_2_term_Policy.py  SB3_Load.py  SB3_Train.py  example.txt  print_test.py  thrust_logging.py  thrust_plotting.py
crazyflie_gazebo/: CMakeLists.txt  package.xml
crazyflie_gazebo/include/: Ceiling_FT_Sensor.h  DomainRandomization.h  Landing_Surface_Pose.h  Model_Move.h  NN_Layers_Flip_Wide-Long.h  NN_Layers_Policy_Wide-Long.h  NN_Params.h  OF_Sensor_plugin.h  OpticalFlow_plugin.h  Plane_Pose.h  controller copy.h  controller.h  example.h  gazebo_motor_model.h  gazebo_sticky_foot.h  math3d.h  model_Moment.h  motor_plugin.h  nml.h  stabilizer_types.h
crazyflie_gazebo/models/: Leg_Configurations.txt
crazyflie_gazebo/src/: CF_mass.py  Ceiling_FT_Sensor.cpp  DomainRandomization.cpp  Landing_Surface_Pose.cpp  Model_Move.cpp  OF_Sensor_plugin.cpp  OpticalFlow_plugin.cpp  Plane_Pose.cpp  ceiling_ft_rostopic_converter.cpp  controller  controller copy.cpp  controller.cpp  example  example copy.c  example.c  gazebo_mavlink.cpp  gazebo_motor_model.cpp  gazebo_sticky_foot.cpp  model_Moment.cpp  motor_plugin.cpp  nml.c  test  toy_network_test.c  union_example.c
crazyflie_gazebo/worlds/: CeilingSurface_Large.world  FlightCage.world  Gazebo_World.world  Plane_20_deg.world  ceiling.world
crazyflie_gazebo2/: CMakeLists.txt  package.xml
crazyflie_gazebo2/include/: gazebo_sticky_foot copy.h  gazebo_sticky_foot.h  motor_plugin.h
crazyflie_gazebo2/launch/: crazyflie_gazebo.launch  crazyflie_rviz.launch
crazyflie_gazebo2/models/: crazyflie.sdf
crazyflie_gazebo2/src/: gazebo_sticky_foot.cpp  model_push.cpp  motor_plugin.cpp
crazyflie_gazebo2/urdf/: crazyflie.gazebo  crazyflie.xacro
crazyflie_gazebo2/worlds/: CeilingSurface_Large.world  FlightCage.world  Plane_45_deg.world  Plane_60_deg.world  Plane_90_deg.world  ceiling_surface.world
crazyflie_msgs/: CMakeLists.txt  package.xml
crazyflie_msgs/msg/: CF_FlipData.msg  CF_ImpactData.msg  CF_MiscData.msg  CF_StateData.msg  CtrlData.msg  CtrlDebug.msg  GTC_Cmd.msg  ImpactData.msg  MS.msg  OF_SensorData.msg  PadConnect.msg  RLConvg.msg  RLData.msg  Vicon_Filtered.msg
crazyflie_msgs/srv/: AddTwoInts.srv  GTC_Cmd_srv.srv  ModelMove.srv  Policy_Values.srv  RLCmd.srv  RLCmdService.srv  activateSticky.srv  loggingCMD.srv
crazyflie_projects/: CMakeLists.txt  package.xml
crazyflie_projects/DeepRL/: Alg_To_Implement.txt  Angled_Surface_Data_Collection.xlsx  Brake_Trigger_Env.py  Brake_Val_Env.py  CF_Env.py  CF_Env2.py  CF_Env3.py  CF_Env_2D.py  CF_Env_2D_Simple.py  CF_Env_2D_dTau.py  Cont_Pos_Env.py  Cont_Value_Pred_Env.py  Discrete_Pos_Env.py  Env_Example.py  NN_Writer.py  Policy_Training_DeepRL.py  Policy_Viewer.py  SB3_Load.py  SB3_Load_Gazebo.py  SB3_Train.py  SB3_Train_Gazebo.py  Tau_Coast_Env.py  Tau_Trigger_Cont_Env.py  (+5 more)
example_cpp/: CMakeLists.txt  DataChecker.py
example_msgs/: CMakeLists.txt  package.xml
sar_config/: Base_Settings.yaml  CMakeLists.txt  Cam_Types.yaml  Model_Types.yaml  Sim_Settings.yaml  package.xml
sar_control/: CMakeLists.txt  package.xml
sar_data_converter/: CMakeLists.txt  package.xml
sar_gazebo/: CMakeLists.txt  package.xml
sar_general/: CMakeLists.txt  Highspeed_Video_Compression.py  Impact_Condition_Plots.py  OF_Sensor_Rate.txt  PDF2PNG.py  ROS_NetworkDiagram.drawio  Sensor_List.txt  package.xml
sar_launch/: CMakeLists.txt  Gazebo_Sim.launch  Load_Params.launch  RViz.launch  RViz_Config.rviz  debug.launch  example2.launch  launch_gazebo.bash  package.xml  rrbot_world.launch
sar_lidar/: CMakeLists.txt  Camera.py  package.xml
sar_msgs/: CMakeLists.txt  package.xml
(+4292 files in other folders)
