<?xml version="1.0"?>
<package format="2">
  <name>crazyflie_gazebo</name>
  <version>0.0.0</version>
  <description>The crazyflie_gazebo package</description>
  <maintainer email="bhabas@todo.todo">bhabas</maintainer>
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

  <depend>crazyflie_msgs</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models/Crazyflie_Models"/>
    <gazebo_ros gazebo_model_path="${prefix}/models/Landing_Surfaces"/>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
  </export>
</package>
