<?xml version="1.0"?>
<package format="2">
  <name>crazyflie_gazebo2</name>
  <version>0.0.0</version>
  <description>The crazyflie_gazebo2 package</description>
  <maintainer email="bhabas@todo.todo">bhabas</maintainer>
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <exec_depend>gazebo_ros</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
