<?xml version="1.0"?>
<package format="2">
  <name>example_cpp</name>
  <version>0.0.0</version>
  <description>The pub_example package</description>


  <maintainer email="bhabas@todo.todo">bhabas</maintainer>



  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <depend>example_msgs</depend>


</package>
